libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__skips_parsing_resource_due_to_invalid_resource_type_in_json_blueprint_config.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2023-04-20",
  "transform": [
    "celerity-2024-07-22"
  ],
  "variables": {
    "certificateId": {
      "type": "string",
      "description": "The ID of the certificate to use for the API domain."
    },
    "logLevel": {
      "type": "string",
      "allowedValues": [
        "DEBUG",
        "INFO",
        "WARNING",
        "ERROR"
      ],
      "default": "INFO",
      "description": "The log level to use for logging."
    },
    "paymentApiSecret": {
      "type": "string",
      "secret": true,
      "description": "The secret to use for authenticating with the API."
    },
    "secretStoreId": {
      "type": "string",
      "description": "The ID of the secret store to use for storing secrets."
    }
  },
  "resources": {
    "getOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Get Order Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "GET",
          "celerity.handler.http.path": "/orders/{orderId}"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-GetOrderHandler-v1",
        "codeLocation": "./orders",
        "handler": "handlers.get_order",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "${variables.logLevel}",
          "PAYMENT_API_SECRET": "${variables.paymentApiSecret}",
          "SECRET_STORE_ID": "${variables.secretStoreId}"
        }
      }
    }
  }
}
